Vectorise the three kernels C2 will not, and leave it the three it does
The measurement in the previous commit says 45.5% of a solve is dense loops with
no SIMD in the source. The inference I wrote down from it -- 3x on those would be
1.43x overall -- is wrong, and the way it is wrong is the useful part.

**There was SIMD in the tree; it was not in the source.** HotSpot's SuperWord
pass auto-vectorises a plain `while` loop over contiguous arrays, so `axpby`,
`scale` and `dualStep` were already vector instructions. Confirmed rather than
assumed: under `-XX:-UseSuperWord` the reference `axpby` slows from 7.0 to
8.6 us. Against a loop C2 has already widened, `jdk.incubator.vector` brings only
its own overhead -- 1.44x, 1.30x and 2.17x *slower* respectively.

What C2 will not do is reassociate floating-point addition, since that changes
the answer, so a reduction stays scalar however simple it looks. That is where
the win is: `dot` 1.65x, `squaredNorm` 1.64x, and `primalStep` 1.27x because its
clamp is a data-dependent branch per element that SuperWord also declines.

So this widens three operations and hands three back. Widening all six gave
1.029x, which is noise; the three that win give 5,602 ms against 5,202 ms over
interleaved runs, or **1.08x**. Modest, real, and free once the flag is on.

## Two lanes

`SPECIES_PREFERRED` is 2 here -- Apple Silicon, 128-bit NEON. That is the
narrowest useful width and it is most of why the losses are losses. On AVX2 or
AVX-512 the losing rows could flip, nothing here has measured that, and the
scaladoc and NOTES both say so rather than presenting a laptop result as a
property of the code. `KernelSplit` prints the lane count in the backend name so
a future number cannot be read without it.

## A trap that cost 3x

The first version held the species in a `private val` and `squaredNorm` ran three
times *slower* than the scalar loop -- worse than not vectorising. The intrinsics
constant-fold on the species, and `DoubleVector.SPECIES_