@@ -1,6 +1,6 @@
 package org.noaidi.prima
 
-import org.noaidi.prima.kernels.{Float32Kernels, ScalaKernels}
+import org.noaidi.prima.kernels.{Float32Kernels, ScalaKernels, VectorKernels}
 
 /** Behavioural contract for a [[org.noaidi.prima.kernels.Kernels]] backend.
   *
@@ -242,4 +242,112 @@ class Float32KernelsSuite extends KernelContractSuite("scala-float32"):
       // that the two infinities above were preserved deliberately, not by luck.
       assert(host(2).isPosInfinity)
     finally k.close()
+  }
+
+/** The SIMD backend against the same contract as every other.
+  *
+  * `assume` rather than a hard failure when the module is absent: this suite
+  * runs wherever the build runs, and `--add-modules=jdk.incubator.vector` is set
+  * for this project's forked test JVM but cannot be guaranteed for someone
+  * running the suite another way. A skip says "not measured here"; a failure
+  * would say "the backend is broken", which would be a lie about the code.
+  *
+  * The reduction cases are the ones that make this more than a copy of
+  * `ScalaKernelsSuite`: `dot` and `squaredNorm` accumulate lane-wise and reduce
+  * at the end, so they sum in a different order from the reference and are held
+  * to the contract's tolerance rather than to equality.
+  */
+class VectorKernelsSuite extends KernelContractSuite("scala-vector"):
+  override def munitIgnore: Boolean = !VectorKernels.isAvailable
+  def newKernels(): kernels.Kernels = VectorKernels()
+
+  test("the vector backend advertises full double precision") {
+    assume(VectorKernels.isAvailable, "jdk.incubator.vector not resolved")
+    val k = VectorKernels()
+    assert(k.capabilities.supportsFloat64)
+    assert(!k.capabilities.requiresDoublePrecisionRefinement)
+    // The lane count is in the name, so a report says which machine's width
+    // produced it rather than leaving that to be inferred.
+    assert(k.capabilities.name.startsWith("scala-vector-"), k.capabilities.name)
+  }
+
+  test("a length that is not a whole number of vectors is still exact") {
+    assume(VectorKernels.isAvailable, "jdk.incubator.vector not resolved")
+    // The tail is where a widened loop goes wrong, and it goes wrong silently:
+    // every operation here writes the whole array, so a tail that was skipped
+    // leaves whatever `allocate` put there, which is zero -- a plausible number.
+    // Lengths are swept rather than sampled so that every remainder against the
+    // machine's lane count is covered whatever that count is.
+    val vector = VectorKernels()
+    val ref    = ScalaKernels()
+    try
+      (0 to 40).foreach { n =>
+        val x = Array.tabulate(n)(i => 1.0 + i * 0.25)
+        val y = Array.tabulate(n)(i => 2.0 - i * 0.125)
+        val a = new Array[Double](n)
+        val b = new Array[Double](n)
+        vector.axpby(1.5, x, -0.5, y, a)
+        ref.axpby(1.5, x, -0.5, y, b)
+        assertEquals(a.toSeq, b.toSeq, s"axpby at length $n")
+        assertEqualsDouble(vector.dot(x, y), ref.dot(x, y), 1e-12, s"dot at length $n")
+        assertEqualsDouble(
+          vector.squaredNorm(x), ref.squaredNorm(x), 1e-12, s"squaredNorm at length $n")
+      }
+    finally
+      vector.close()
+      ref.close()
+  }
+
+  test("the dual projection splits at the equality boundary wherever it falls") {
+    assume(VectorKernels.isAvailable, "jdk.incubator.vector not resolved")
+    // `dualStep` applies two different projections to two ranges of one array,
+    // and the boundary between them is `numEqualities` -- a number with no
+    // reason to land on a vector boundary. The widened version stops its first
+    // run at the last whole vector *inside* the equality block and starts the
+    // second unaligned, so every split has to be checked, not just the aligned
+    // ones. Sigma is negative for some entries' arithmetic so the clamp fires.
+    val vector = VectorKernels()
+    val ref    = ScalaKernels()
+    try
+      val n     = 37
+      val y     = Array.tabulate(n)(i => 0.5 - i * 0.1)
+      val kxBar = Array.tabulate(n)(i => i * 0.2 - 2.0)
+      val rhs   = Array.tabulate(n)(i => 1.0 - i * 0.05)
+      (0 to n).foreach { eq =>
+        val a = new Array[Double](n)
+        val b = new Array[Double](n)
+        vector.dualStep(y, kxBar, rhs, 0.7, eq, a)
+        ref.dualStep(y, kxBar, rhs, 0.7, eq, b)
+        assertEquals(a.toSeq, b.toSeq, s"dualStep with $eq equality rows")
+      }
+    finally
+      vector.close()
+      ref.close()
+  }
+
+  test("an infinite bound passes an infinite candidate through") {
+    assume(VectorKernels.isAvailable, "jdk.incubator.vector not resolved")
+    // The property `ScalaKernels` writes its clamp as two comparisons to
+    // preserve, restated against the blended version. `min`/`max` would give the
+    // same answer here; what would not is getting the blend order wrong, so a
+    // degenerate box with `lower` above `upper` is included -- the scalar
+    // `if/else if` returns `lower` there, and the blends have to agree.
+    val vector = VectorKernels()
+    val ref    = ScalaKernels()
+    try
+      val inf   = Double.PositiveInfinity
+      val x     = Array(inf, -inf, 1.0, 5.0, 0.0, 2.0, -3.0, 9.0, 4.0)
+      val ktY   = new Array[Double](x.length)
+      val cost  = new Array[Double](x.length)
+      val lower = Array(-inf, -inf, 0.0, 10.0, -inf, 1.0, -1.0, -inf, 0.0)
+      val upper = Array(inf, inf, inf, 0.0, 3.0, 1.5, inf, 2.0, inf)
+      val a     = new Array[Double](x.length)
+      val b     = new Array[Double](x.length)
+      vector.primalStep(x, ktY, cost, lower, upper, 0.5, a)
+      ref.primalStep(x, ktY, cost, lower, upper, 0.5, b)
+      assertEquals(a.toSeq, b.toSeq)
+      assertEquals(a(0), inf, "an infinite candidate under an infinite bound")
+    finally
+      vector.close()
+      ref.close()
   }
